[package]
name = "rustcache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.8"
failure_derive = { version = "0.1.8" }
futures = "0.3.28"
futures-util = "0.3.28"
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = "0.7.8"
bytes = "1.5.0"
byteorder = "1.3"
serde = "1.0.104"
serde_derive = "1.0.104"
num-traits = "0.2.16"
num-derive = "0.4.0"
actix = "0.13.1"
dashmap = "5.5.3"
simplelog = "0.12.1"
log = "0.4.20"
